# imdb-movie-search

./: .coveragerc  .gitignore  README.md  pyproject.toml
imdb_movie_search/: imdb.py
tests/: test_imdb.py
